# arrow

./: .gitignore  Cargo.toml  arrow.rb  readme.md
src/: embedding.rs  lib.rs  main.rs  vectorstore.rs
