[package]
name = "arrow"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "arrow"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
protobuf = "2.8.0"
candle-core = "0.8.4"
candle-nn = "0.8.4"
candle-transformers = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokenizers = "0.21.1"
nalgebra = "0.32.3"
rust-bert = "0.23.0"
