[package]
name = "arrow"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "arrow"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
protobuf = "2.8.0"
candle-core = "0.8.4"
candle-nn = "0.8.4"
candle-transformers = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.21.1"
nalgebra = "0.32.3"
rust-bert = "0.23.0"
rand = "0.8.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive"] }
colored = "2.1.0"
indicatif = "0.17.11"
console = "0.15.11"
tabled = "0.14.0"
